flask not working

--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 <br><br>
-  <!-- <div class="container-fluid">
+  <div class="container-fluid">
     <center><h2>Mars Hemispheres</h2></center>
   <hr>
 </div>
@@ -80,7 +80,7 @@
           <div class="card-body">
           </div>
       </div>  
-    </div> -->
+    </div>
 
   
 </div>
